<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Magonjwa Maarufu ya kuku"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="15sp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/Disease1"
            android:layout_width="257dp"
            android:layout_height="138dp"
            app:srcCompat="@drawable/gumboro2"
            android:layout_gravity="center"

            android:contentDescription="@string/kuku_mwenye_mareks"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"

            android:paddingTop="10sp"
            android:text="@string/ugonjwa_wa_mareks"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/maelezo_newcastle"
            tools:ignore="TextFields"
            android:paddingBottom="15sp"
            />
    </LinearLayout>

</ScrollView>