<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10sp"
    android:paddingRight="10sp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Magonjwa Maarufu ya kuku"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="15sp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/Disease2"
            android:layout_width="215dp"
            android:layout_height="138dp"
            android:layout_gravity="center"
            android:background="@drawable/gumboro1"

            android:visibility="visible"
            tools:ignore="ContentDescription" />


        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:paddingTop="10sp"
            android:text="@string/ugonjwa_wa_gumboro"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="15sp"
            android:text="@string/maelezo_gumboro"
            android:visibility="visible"
            tools:ignore="TextFields" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/page_2"
            android:textAlignment="center"/>
    </LinearLayout>

</ScrollView>